--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
   img {
     float: left;
   }
+
+  #p1 {
+    width: 200px;
+  }
     
   * {
     background-color: #ADD8E6;
@@ -32,11 +36,11 @@
 <body>
   <h1><a href="https://www.facebook.com/profile.php?id=100014333114438">Nov Panhavath</a></h1>
   <img src="https://scontent.fpnh11-1.fna.fbcdn.net/v/t39.30808-6/441952069_1796994630788290_2108898775577135079_n.jpg?_nc_cat=105&ccb=1-7&_nc_sid=6ee11a&_nc_eui2=AeHj_6V_UyWfpZwyu6yZXVu1YNG03Bv4qXJg0bTcG_ipckRK2pvlbhm2C_3MEf1KdHyr1_GutBjdksb7m3Lhisdj&_nc_ohc=Od06SatkerAQ7kNvgHMzmWy&_nc_zt=23&_nc_ht=scontent.fpnh11-1.fna&_nc_gid=AHQg5Pc6-EI_fIMhqSyEZLF&oh=00_AYDBwrypckY_P4anQ1Yf2Us7t8kG-bfHEg9DKtYcLJLwbw&oe=6792A323" alt="Profile image" height="200">
-  <p>
+  <p id="p1">
     I have learned of programming skills since 2022. And these 3 years skills I have learned a lot such as Python, C, C++, HTML, CSS, MachineLearning, Django...
-  <hr>
   
   <div>
+    <hr>
     <h3>My Degrees/Skills programming</h3>
   <ul>
     <li>C++ Etec Center</li>
